--- a/index.html
+++ b/index.html
@@ -2,9 +2,95 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Restaurant Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <h2 class="section1-title1">Restaurant</h2>
+      <h3 class="section1-title2">Explore our menu and eat what you want</h3>
+      <div class="section1-left-block1">
+        <img class="img1" src="images/img1.jpg" alt="img1" />
+        <div class="section1-food-text1">
+          <h4 class="section1-food1">Food</h4>
+          <h5 class="section1-food2">Fresh fish and onions</h5>
+          <p class="section1-par">
+            Fresh food directly from our restaurant ready coocked for you and
+            you familly
+          </p>
+        </div>
+      </div>
+      <!---->
+      <div class="section1-right-block1">
+        <img class="img2" src="images/img2.jpg" alt="img2" />
+        <div class="section1-food-text2">
+          <h4 class="section1-food1">Desert</h4>
+          <h5 class="section1-food2">Chocolate cupcakes</h5>
+          <p class="section1-par">
+            Fresh food directly from our restaurant ready coocked for you and
+            you familly
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="section2">
+        <h2 class="section2-title1">ბლოგი</h2>
+        <h3 class="section2-title2">წაიკითხეთ ჩვენი უახლესი ბლოგ-პოსტები</h3>
+
+        <div class="block1">
+          <img src="images/img3.jpg" alt="img3" />
+          <div class="section2-food-text1">
+            <h4 class="section2-food1">საკვები და სიცოცხლე</h4>
+            <h5 class="section2-food2">წარმატება სასტუმრო ბიზნესში</h5>
+            <p class="section2-par">ფრეშ საკვები ჩვენი რესტორნიდან თქვენთვის</p>
+          </div>
+        </div>
+        <!-- 
+      -->
+        <div class="block2">
+          <img src="images/img4.jpg" alt="img4" />
+          <div class="section2-food-text1">
+            <h4 class="section2-food1">საკვების მომზადება</h4>
+            <h5 class="section2-food2">გემრიელი საკვების მომზადება</h5>
+            <p class="section2-par">ფრეშ საკვები ჩვენი რესტორნიდან თქვენთვის</p>
+          </div>
+        </div>
+        <!---->
+        <div class="block3">
+          <img src="images/img5.jpg" alt="img5" />
+          <div class="section2-food-text1">
+            <h4 class="section2-food1">ხილი</h4>
+            <h5 class="section2-food2">გემრიელი საკვების მომზადება</h5>
+            <p class="section2-par">ფრეშ საკვები ჩვენი რესტორნიდან თქვენთვის</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
