--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     </section>
 
     <section>
-      <div class="section2">
+      
         <h2 class="section2-title1">ბლოგი</h2>
         <h3 class="section2-title2">წაიკითხეთ ჩვენი უახლესი ბლოგ-პოსტები</h3>
 
         <div class="block1">
-          <img src="images/img3.jpg" alt="img3" />
+          <img class="img3" src="images/img3.jpg" alt="img3" />
           <div class="section2-food-text1">
             <h4 class="section2-food1">საკვები და სიცოცხლე</h4>
             <h5 class="section2-food2">წარმატება სასტუმრო ბიზნესში</h5>
@@ -74,16 +74,17 @@
         <!-- 
       -->
         <div class="block2">
-          <img src="images/img4.jpg" alt="img4" />
+          <img class="img4" src="images/img4.jpg" alt="img4" />
           <div class="section2-food-text1">
             <h4 class="section2-food1">საკვების მომზადება</h4>
             <h5 class="section2-food2">გემრიელი საკვების მომზადება</h5>
             <p class="section2-par">ფრეშ საკვები ჩვენი რესტორნიდან თქვენთვის</p>
           </div>
         </div>
-        <!---->
+        <!--    
+        -->
         <div class="block3">
-          <img src="images/img5.jpg" alt="img5" />
+          <img class="img5" src="images/img5.jpg" alt="img5" />
           <div class="section2-food-text1">
             <h4 class="section2-food1">ხილი</h4>
             <h5 class="section2-food2">გემრიელი საკვების მომზადება</h5>
